crates/snapshots/snapshots/cli_snapshots__styles__style_compound_queries.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_compound_queries

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,2 +0,0 @@\n-@media screen and (min-width: 40rem) and (orientation: landscape) { .button { display: grid; } }\n-@container card_grid (min-width: 20rem) and (max-width: 40rem) { .button { color: red; } }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"[@container_card\\_grid_(min-width:20rem)_and_(max-width:40rem)]:text-[red] screen:sm:landscape:grid\">Save</button>;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,7 @@\n @import \"tailwindcss\";\n+\n+@custom-variant screen {\n+  @media screen {\n+    @slot;\n+  }\n+}\nApplied 3 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: "@media screen and (min-width: 40rem) and (orientation: landscape) { .button { display: grid; } }\n@container card_grid (min-width: 20rem) and (max-width: 40rem) { .button { color: red; } }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"[@container_card\\_grid_(min-width:20rem)_and_(max-width:40rem)]:text-[red] screen:sm:landscape:grid\">Save</button>;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@custom-variant screen {\n  @media screen {\n    @slot;\n  }\n}\n"
