crates/snapshots/snapshots/cli_snapshots__styles__style_conditional_definitions.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_conditional_definitions

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,3 +0,0 @@\n-@property --progress { syntax: \"<number>\"; inherits: false; initial-value: 0; }\n-@media (prefers-reduced-motion: reduce) { @starting-style { @container (min-width: 28rem) { .button { display: grid; } } } }\n-@media (prefers-color-scheme: dark) { .button { color: white; } }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"dark:text-[white] motion-reduce:starting:@md:grid\">Save</button>;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,3 @@\n @import \"tailwindcss\";\n+\n+@property --progress { syntax: \"<number>\"; inherits: false; initial-value: 0; }\nApplied 3 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: "@property --progress { syntax: \"<number>\"; inherits: false; initial-value: 0; }\n@media (prefers-reduced-motion: reduce) { @starting-style { @container (min-width: 28rem) { .button { display: grid; } } } }\n@media (prefers-color-scheme: dark) { .button { color: white; } }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"dark:text-[white] motion-reduce:starting:@md:grid\">Save</button>;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@property --progress { syntax: \"<number>\"; inherits: false; initial-value: 0; }\n"
