crates/snapshots/snapshots/cli_snapshots__styles__style_conditions_inside_rule.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_conditions_inside_rule

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,13 +0,0 @@\n-@media (min-width: 48rem) {\n-  .button:hover {\n-    opacity: 1;\n-    font-family: \"Base Font\", serif;\n-    @starting-style { opacity: 0; }\n-    @media print {\n-      @supports (display: grid) {\n-        display: grid;\n-        font-family: \"Print Font\", serif;\n-      }\n-    }\n-  }\n-}\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"md:hover:font-base-font md:hover:opacity-[1] md:hover:print:supports-[display:grid]:font-print-font md:hover:print:supports-[display:grid]:grid md:hover:starting:opacity-[0]\">Save</button>;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,6 @@\n @import \"tailwindcss\";\n+\n+@theme {\n+  --font-base-font: \"Base Font\", serif;\n+  --font-print-font: \"Print Font\", serif;\n+}\nApplied 3 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: "@media (min-width: 48rem) {\n  .button:hover {\n    opacity: 1;\n    font-family: \"Base Font\", serif;\n    @starting-style { opacity: 0; }\n    @media print {\n      @supports (display: grid) {\n        display: grid;\n        font-family: \"Print Font\", serif;\n      }\n    }\n  }\n}\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"md:hover:font-base-font md:hover:opacity-[1] md:hover:print:supports-[display:grid]:font-print-font md:hover:print:supports-[display:grid]:grid md:hover:starting:opacity-[0]\">Save</button>;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@theme {\n  --font-base-font: \"Base Font\", serif;\n  --font-print-font: \"Print Font\", serif;\n}\n"
