crates/snapshots/snapshots/cli_snapshots__styles__style_direct_less.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_direct_less

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.less\n+++ b/Button.module.less\n@@ -1,1 +0,0 @@\n-.button { padding: 13px; }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.less';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nApplied 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: "warning[rebuild-required] Button.module.less Rebuild this preprocessor entry to refresh its generated CSS.\n"
workspace delta:
  deleted Button.module.less
    before: ".button { padding: 13px; }\n"
  modified Button.tsx
    before: "import styles from './Button.module.less';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"p-[13px]\">Save</button>;\n"
