crates/snapshots/snapshots/cli_snapshots__styles__style_direct_sass.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_direct_sass

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.sass\n+++ b/Button.module.sass\n@@ -1,2 +0,0 @@\n-.button\n-  padding: 13px\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.sass';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nApplied 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: "warning[rebuild-required] Button.module.sass Rebuild this preprocessor entry to refresh its generated CSS.\n"
workspace delta:
  deleted Button.module.sass
    before: ".button\n  padding: 13px\n"
  modified Button.tsx
    before: "import styles from './Button.module.sass';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"p-[13px]\">Save</button>;\n"
