crates/snapshots/snapshots/cli_snapshots__styles__style_dynamic_global_warning.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_dynamic_global_warning

--- step: automatic ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[retained-global-rule] a.css:1:1-1:21 Global CSS is never deleted automatically.\nwarning[retained-global-rule] b.css:1:1-1:21 Global CSS is never deleted automatically.\nwarning[dynamic-class-name] Button.tsx:2:41-4:6 Only static className values are supported.\n"
workspace delta:
  unchanged
