crates/snapshots/snapshots/cli_snapshots__styles__style_eof.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_eof

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,2 +1,1 @@\n .other { display: grid; }\n-.button { padding: 13px; }\n\\ No newline at end of file\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,2 @@\n import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nApplied 2 file(s); 1 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:1:1-1:26 No exclusively supported className references were found.\n"
workspace delta:
  modified Button.module.css
    before: ".other { display: grid; }\n.button { padding: 13px; }"
    after: ".other { display: grid; }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "import styles from './Button.module.css';\nexport const Button = () => <button className=\"p-[13px]\">Save</button>;\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:1:1-1:26 No exclusively supported className references were found.\n"
workspace delta:
  unchanged
