crates/snapshots/snapshots/cli_snapshots__styles__style_explicit_selection.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_explicit_selection

--- step: migrate ---
status: 0
stdout: "--- a/Card.tsx\n+++ b/Card.tsx\n@@ -1,1 +1,1 @@\n-export const Card = () => <div className=\"card\" />;\n+export const Card = () => <div className=\"card text-[red]\" />;\nPreviewed 1 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[retained-global-rule] legacy.css:1:1-1:22 Global CSS is never deleted automatically.\n"
workspace delta:
  unchanged
